# ESP32_EdgeAI

./: .gitignore  LICENSE  README.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  alert.c  alert.h  audio_capture.c  audio_capture.h  camera.c  camera.h  dsp_pipeline.c  dsp_pipeline.h  idf_component.yml  index.html  inference.c  inference.h  main.c  model_data.c  model_data.h  web_server.c  web_server.h  wifi_sta.c  wifi_sta.h
ml/: README.md  requirements.txt  train_eye_state_model.py
